--- a/packages/aws/package.json
+++ b/packages/aws/package.json
@@ -31,15 +31,26 @@
         "default": "./dist/commonjs/cloudfront/mod.js"
       }
     },
-    "./cloudfront/consts": {
+    "./cloudfront/cache-policy": {
       "import": {
-        "@systemfsoftware/source": "./src/cloudfront/consts.ts",
-        "types": "./dist/esm/cloudfront/consts.d.ts",
-        "default": "./dist/esm/cloudfront/consts.js"
+        "@systemfsoftware/source": "./src/cloudfront/cache-policy.ts",
+        "types": "./dist/esm/cloudfront/cache-policy.d.ts",
+        "default": "./dist/esm/cloudfront/cache-policy.js"
       },
       "require": {
-        "types": "./dist/commonjs/cloudfront/consts.d.ts",
-        "default": "./dist/commonjs/cloudfront/consts.js"
+        "types": "./dist/commonjs/cloudfront/cache-policy.d.ts",
+        "default": "./dist/commonjs/cloudfront/cache-policy.js"
+      }
+    },
+    "./cloudfront/origin-request": {
+      "import": {
+        "@systemfsoftware/source": "./src/cloudfront/origin-request.ts",
+        "types": "./dist/esm/cloudfront/origin-request.d.ts",
+        "default": "./dist/esm/cloudfront/origin-request.js"
+      },
+      "require": {
+        "types": "./dist/commonjs/cloudfront/origin-request.d.ts",
+        "default": "./dist/commonjs/cloudfront/origin-request.js"
       }
     }
   },
@@ -56,7 +67,8 @@
       "./package.json": "./package.json",
       ".": "./src/mod.ts",
       "./cloudfront": "./src/cloudfront/mod.ts",
-      "./cloudfront/consts": "./src/cloudfront/consts.ts"
+      "./cloudfront/cache-policy": "./src/cloudfront/cache-policy.ts",
+      "./cloudfront/origin-request": "./src/cloudfront/origin-request.ts"
     },
     "sourceDialects": [
       "@systemfsoftware/source"
