--- a/packages/aws/package.json
+++ b/packages/aws/package.json
@@ -79,9 +79,12 @@
   "scripts": {
     "prepare": "pnpm turbo build",
     "clean": "rimraf dist .tshy .tshy-build",
-    "build": "pnpm run clean && tshy"
+    "build": "pnpm run clean && tshy && pnpm run extract",
+    "extract": "api-extractor run"
   },
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "@systemfsoftware/api-extractor": "workspace:^"
+  },
   "peerDependencies": {}
 }
