--- a/packages/effect/package.json
+++ b/packages/effect/package.json
@@ -23,15 +23,15 @@
         "default": "./dist/commonjs/mod.js"
       }
     },
-    "./Layer": {
+    "./Logger": {
       "import": {
-        "@systemfsoftware/source": "./src/layer.ts",
-        "types": "./dist/esm/layer.d.ts",
-        "default": "./dist/esm/layer.js"
+        "@systemfsoftware/source": "./src/logger.ts",
+        "types": "./dist/esm/logger.d.ts",
+        "default": "./dist/esm/logger.js"
       },
       "require": {
-        "types": "./dist/commonjs/layer.d.ts",
-        "default": "./dist/commonjs/layer.js"
+        "types": "./dist/commonjs/logger.d.ts",
+        "default": "./dist/commonjs/logger.js"
       }
     }
   },
@@ -46,7 +46,7 @@
     "exports": {
       "./package.json": "./package.json",
       ".": "./src/mod.ts",
-      "./Layer": "./src/layer.ts"
+      "./Logger": "./src/logger.ts"
     },
     "sourceDialects": [
       "@systemfsoftware/source"
