--- a/packages/neon-serverless-adapter/package.json
+++ b/packages/neon-serverless-adapter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@systemfsoftware/neon-serverless-adapter",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "type": "module",
   "exports": {
     "./package.json": "./package.json",
@@ -37,14 +37,15 @@
   },
   "dependencies": {
     "@effect/platform": "catalog:",
-    "drizzle-orm": "~0.34.1",
     "@neondatabase/serverless": "^0.9.5"
   },
   "devDependencies": {
     "effect": "catalog:",
+    "drizzle-orm": "catalog:",
     "@systemfsoftware/api-extractor": "workspace:^"
   },
   "peerDependencies": {
+    "drizzle-orm": "catalog:",
     "effect": "catalog:"
   }
 }
