--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,7 +2,6 @@ packages:
   - packages/*
 
 catalog:
-  "effect": "^3.9.1"
-  "@effect/schema": "^0.75.2"
-  "@effect/platform": "^0.68.1"
-  "drizzle-orm": "~0.34.1"
+  "effect": "^3.10.4"
+  "@effect/platform": "^0.69.9"
+  "drizzle-orm": "^0.34.1"
