--- a/packages/neon-serverless-adapter/package.json
+++ b/packages/neon-serverless-adapter/package.json
@@ -38,13 +38,13 @@
     "@neondatabase/serverless": "^0.9.5"
   },
   "devDependencies": {
-    "effect": "catalog:",
-    "drizzle-orm": "catalog:",
+    "effect": "^3.10.4",
+    "drizzle-orm": "^0.34.1",
     "@systemfsoftware/api-extractor": "workspace:^"
   },
   "peerDependencies": {
-    "@effect/platform": "catalog:",
-    "drizzle-orm": "catalog:",
-    "effect": "catalog:"
+    "@effect/platform": "^0.69.9",
+    "drizzle-orm": "^0.34.1",
+    "effect": "^3.10.4"
   }
 }
